Wed Dec 26 15:04:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Fixed a compiler warning.

Fri Dec 21 19:52:01 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Fixed an instance of reactor timer scheduling deadlock.

Fri Dec 21 17:06:53 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:
        * tests/DCPS/ConfigFile/ConfigFile.cpp:

          If a [domain/] section is in the config file but doesn't have
          a discovery setting, use the default discovery.

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Check for AckNack with empty bitmap when processing durable data.

Thu Dec 20 15:46:15 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Allow for the resend_data_ list to be empty.  This can happen if
          content filtering is used along with non-volatile durability and
          all of the durable data happened to get filtered-out.
          Content filtering the durable data is a new feature as of the commit
          Mon Oct 22 01:23:03 UTC 2012.

Wed Dec 19 16:34:05 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Due to the change in Heartbeat timing from the commit
          Wed Dec  5 21:57:56 UTC 2012, need to make sure that the AckNack
          response to the initial Heartbeat (for handshaking) doesn't
          unnecessarily cause retransmisison of sample with sequence number 1.

Mon Dec 17 21:02:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:

          Fixed DataReader::delete_contained_entities().

        * tests/DCPS/ReadCondition/ReadConditionTest.cpp:

          Tested the above.
