@@ -42,7 +42,6 @@ tests/DCPS/FooTest3_2/run_test.pl rtps_b: !DCPS_MIN RTPS !STATIC
 tests/DCPS/LivelinessTest/run_test.pl: !DCPS_MIN !DDS_NO_OWNERSHIP_PROFILE
 tests/DCPS/LivelinessTest/run_test.pl take: !DCPS_MIN !DDS_NO_OWNERSHIP_PROFILE
 tests/DCPS/LivelinessTest/run_test.pl udp: !DCPS_MIN !DDS_NO_OWNERSHIP_PROFILE
-tests/DCPS/DomainParticipantId/run_test.pl: RTPS
 tests/DCPS/Inconsistent_Qos/run_test.pl: RTPS DDS4CCM_OPENDDS
 tests/DCPS/TopicReuse/run_test.pl: RTPS
 tests/DCPS/DpShutdown/run_test.pl: RTPS
