@@ -1,13 +1,0 @@
-// $Id$
-
-project(DDS*DPId) : dcpsexe_with_tcp, dcps_rtps_udp {
-  exename = dp
-
-  Idl_Files {
-  }
-
-  Source_Files {
-    dp.cpp
-  }
-}
-
