@@ -1,83 +1,0 @@
-// -*- C++ -*-
-// ============================================================================
-/**
- *  @file   publisher.cpp
- *
- *  $Id$
- *
- *
- */
-// ============================================================================
-
-#include <dds/DCPS/Service_Participant.h>
-#include <dds/DCPS/Marked_Default_Qos.h>
-#include <dds/DCPS/PublisherImpl.h>
-#include <dds/DCPS/Qos_Helper.h>
-#include <dds/DCPS/transport/tcp/TcpInst.h>
-
-#ifdef ACE_AS_STATIC_LIBS
-#include <dds/DCPS/RTPS/RtpsDiscovery.h>
-#include <dds/DCPS/transport/rtps_udp/RtpsUdp.h>
-#endif
-
-#include "dds/DCPS/StaticIncludes.h"
-
-#include <ace/streams.h>
-#include "ace/Get_Opt.h"
-
-#include <memory>
-#include <assert.h>
-
-int ACE_TMAIN (int argc, ACE_TCHAR *argv[]){
-  try
-    {
-      DDS::DomainParticipantFactory_var dpf =
-        TheParticipantFactoryWithArgs(argc, argv);
-      DDS::DomainParticipant_var participant1 =
-        dpf->create_participant(11,
-                                PARTICIPANT_QOS_DEFAULT,
-                                DDS::DomainParticipantListener::_nil(),
-                                ::OpenDDS::DCPS::DEFAULT_STATUS_MASK);
-      if (CORBA::is_nil (participant1.in ())) {
-        cerr << "create_participant failed." << endl;
-        return 1;
-      }
-      else
-      {
-        ACE_DEBUG ((LM_DEBUG, "Created participant 1 with instance handle %d\n",
-                    participant1->get_instance_handle ()));
-      }
-      DDS::DomainParticipant_var participant2 =
-        dpf->create_participant(11,
-                                PARTICIPANT_QOS_DEFAULT,
-                                DDS::DomainParticipantListener::_nil(),
-                                ::OpenDDS::DCPS::DEFAULT_STATUS_MASK);
-      if (CORBA::is_nil (participant2.in ())) {
-        cerr << "create_participant failed." << endl;
-        return 1;
-      }
-      else
-      {
-        ACE_DEBUG ((LM_DEBUG, "Created participant 2 with instance handle %d\n",
-                    participant2->get_instance_handle ()));
-      }
-
-      if (participant1->get_instance_handle () == participant1->get_instance_handle ()) {
-        ACE_DEBUG ((LM_DEBUG, "Instance handles are the same\n"));
-      }
-
-      participant1->delete_contained_entities();
-      participant2->delete_contained_entities();
-      dpf->delete_participant(participant1.in ());
-      dpf->delete_participant(participant2.in ());
-      TheServiceParticipant->shutdown ();
-  }
-  catch (CORBA::Exception& e)
-  {
-    cerr << "dp: Exception caught in main.cpp:" << endl
-         << e << endl;
-    exit(1);
-  }
-
-  return 0;
-}
