@@ -1,13 +1,0 @@
-[common]
-DCPSGlobalTransportConfig=$file
-
-[domain/11]
-DiscoveryConfig=fast_rtps
-
-[rtps_discovery/fast_rtps]
-SedpMulticast=0
-ResendPeriod=2
-
-[transport/the_rtps_transport]
-transport_type=rtps_udp
-use_multicast=0
