@@ -1,46 +1,0 @@
-eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
-     & eval 'exec perl -S $0 $argv:q'
-     if 0;
-
-# $Id$
-# -*- perl -*-
-
-use Env (DDS_ROOT);
-use lib "$DDS_ROOT/bin";
-use Env (ACE_ROOT);
-use lib "$ACE_ROOT/bin";
-use PerlDDS::Run_Test;
-
-$status = 0;
-my $debugFile;
-my $debug;
-# $debug = 10;
-$debugFile = "test.log";
-my $debugOpts = "";
-$debugOpts .= "-DCPSDebugLevel $debug " if $debug;
-
-unlink $debugFile;
-
-$is_rtps_disc = 1;
-
-my $pub_opts = ($is_rtps_disc ? "-DCPSConfigFile rtps_disc.ini" : "");
-
-$CL = PerlDDS::create_process ("dp",
-                              "$debugOpts $pub_opts");
-
-print $CL->CommandLine() . "\n";
-
-$client = $CL->SpawnWaitKill (30);
-
-if ($client != 0) {
-    print STDERR "ERROR: client returned $client\n";
-    $status = 1;
-}
-
-if ($status == 0) {
-  print "test PASSED.\n";
-} else {
-  print STDERR "test FAILED.\n";
-}
-
-exit $status;
