@@ -1,3 +1,13 @@
+Wed Dec 26 15:19:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * bin/dcps_tests.lst:
+
+          Removed test "DomainParticipantId" which was not testing anything.
+
+        * tests/DCPS/DomainParticipantId:
+
+          Removed these files.
+
 Wed Dec 26 15:04:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
